envoyfilter-teaching/45/gw-eastwest.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-eastwest
spec:
  selector:
    istio: eastwestgateway
  servers:
  - port:
      number: 3306
      name: tcp
      protocol: TCP
    hosts:
    - mysql.vm.demo
