envoyfilter-teaching/45/dr-productpage-distribute-inside.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        distribute:
        - from: "us-central1/z1/*"
          to:
            "us-central3/z3/*": 100
        - from: "us-central2/z2/*"
          to:
            "us-central3/z3/*": 10
            "us-central1/z1/*": 90
        - from: "us-central3/z3/*"
          to:
            "us-central1/z1/*": 10
            "us-central2/z2/*": 10
            "us-central3/z3/*": 80
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5m
      baseEjectionTime: 15m
