envoyfilter-teaching/45/dr-ratings.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: ratings
  subsets:
  - name: v2-mysql-vm
    labels:
      app: ratings
      version: v2-mysql
